--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div class="sidebar">
+  <a class="logo" routerLink="/home">
+    <i class="bx bx-code-alt"></i>
+    <div class="logo-name"><span>Wealth</span> Health</div>
+  </a>
+  
+</div>
