--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,4 @@
-<div class="sidebar">
-  <a class="logo" routerLink="/home">
-    <i class="bx bx-code-alt"></i>
-    <div class="logo-name"><span>Wealth</span> Health</div>
-  </a>
-  
+<div class=".container-fluid">
+  <h1 class="display-1">Wealth Home</h1>
+  <p class="lead">Welcome to Weather Health otherwise knowns as Wealth because if you haven't got your health you haven't got anything</p>
 </div>
