building basic design scaffold

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,3 +2,11 @@
   <h1 class="display-1">Wealth Home</h1>
   <p class="lead">Welcome to Weather Health otherwise knowns as Wealth because if you haven't got your health you haven't got anything</p>
 </div>
+
+<!-- Login -->
+<div class="container_fluid">
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-primary" routerLink="/landing">Login</button>
+    <button type="button" class="btn btn-success"routerLink="/newLog">Create Account</button>
+  </div>
+</div>
